--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pipecat-ai[daily,cartesia,openai,silero,deepgram]
 fastapi
 uvicorn
 aiohttp
@@ -8,4 +9,3 @@ requests
 loguru
 
 # Unreleased pipecat-ai with extras using PEP 508 syntax
-pipecat-ai[daily,cartesia,openai,silero,deepgram] @ git+https://github.com/pipecat-ai/pipecat.git@main
